data/stderr-2022-12-08T10:30:18+00:00.log
 * Serving Flask app '/opt/app/server.py' (lazy loading)
 * Environment: production
   WARNING: This is a development server. Do not use it in a production deployment.
   Use a production WSGI server instead.
 * Debug mode: off
[31m[1mWARNING: This is a development server. Do not use it in a production deployment. Use a production WSGI server instead.[0m
 * Running on all addresses (0.0.0.0)
 * Running on http://127.0.0.1:9002
 * Running on http://172.27.0.2:9002
[33mPress CTRL+C to quit[0m
 * Restarting with stat
127.0.0.1 - - [08/Dec/2022 10:30:30] "GET / HTTP/1.1" 200 -
127.0.0.1 - - [08/Dec/2022 10:30:33] "GET /app/ HTTP/1.1" 200 -
127.0.0.1 - - [08/Dec/2022 10:30:52] "[33mGET /app/api/ HTTP/1.1[0m" 404 -
127.0.0.1 - - [08/Dec/2022 10:31:04] "[33mGET /app/docs/ HTTP/1.1[0m" 404 -
127.0.0.1 - - [08/Dec/2022 10:31:07] "[33mGET /docs/ HTTP/1.1[0m" 404 -
127.0.0.1 - - [08/Dec/2022 10:33:41] "[33mGET /docs/ HTTP/1.1[0m" 404 -
127.0.0.1 - - [08/Dec/2022 10:33:45] "GET /openapi.json HTTP/1.1" 200 -
127.0.0.1 - - [08/Dec/2022 10:34:15] "GET /docs HTTP/1.1" 200 -
127.0.0.1 - - [08/Dec/2022 10:34:17] "[33mGET /docs/ HTTP/1.1[0m" 404 -
192.168.50.123 - - [08/Dec/2022 10:34:28] "[33mGET /app/docs HTTP/1.1[0m" 404 -
192.168.50.123 - - [08/Dec/2022 10:34:31] "GET /docs HTTP/1.1" 200 -
192.168.50.123 - - [08/Dec/2022 10:35:09] "GET /openapi.json HTTP/1.1" 200 -
192.168.50.123 - - [08/Dec/2022 10:36:21] "GET /docs HTTP/1.1" 200 -
192.168.50.123 - - [08/Dec/2022 10:37:03] "GET /docs HTTP/1.1" 200 -
192.168.50.123 - - [08/Dec/2022 10:37:05] "GET /openapi.json HTTP/1.1" 200 -
192.168.50.123 - - [08/Dec/2022 10:37:18] "GET /openapi.json HTTP/1.1" 200 -
 * Detected change in '/opt/app/server.py', reloading
 * Restarting with stat
192.168.50.123 - - [08/Dec/2022 10:41:27] "GET /docs HTTP/1.1" 200 -
192.168.50.123 - - [08/Dec/2022 10:41:36] "GET /docs HTTP/1.1" 200 -
 * Detected change in '/opt/app/server.py', reloading
 * Restarting with stat
192.168.50.123 - - [08/Dec/2022 10:41:43] "GET /docs HTTP/1.1" 200 -
192.168.50.123 - - [08/Dec/2022 10:41:43] "GET /docs HTTP/1.1" 200 -
192.168.50.123 - - [08/Dec/2022 10:41:45] "GET /openapi.json HTTP/1.1" 200 -
 * Detected change in '/opt/app/server.py', reloading
 * Restarting with stat
192.168.50.123 - - [08/Dec/2022 10:41:54] "GET /docs HTTP/1.1" 200 -
192.168.50.123 - - [08/Dec/2022 10:41:55] "GET /openapi.json HTTP/1.1" 200 -
192.168.50.123 - - [08/Dec/2022 10:43:10] "GET /docs HTTP/1.1" 200 -
 * Detected change in '/opt/app/server.py', reloading
 * Restarting with stat
192.168.50.123 - - [08/Dec/2022 10:43:11] "GET /openapi.json HTTP/1.1" 200 -
 * Detected change in '/opt/app/server.py', reloading
 * Restarting with stat
192.168.50.123 - - [08/Dec/2022 10:43:53] "GET /docs HTTP/1.1" 200 -
192.168.50.123 - - [08/Dec/2022 10:43:54] "GET /openapi.json HTTP/1.1" 200 -
 * Detected change in '/opt/app/server.py', reloading
 * Restarting with stat
 * Detected change in '/opt/app/server.py', reloading
 * Restarting with stat
 * Detected change in '/opt/app/server.py', reloading
 * Restarting with stat
192.168.50.123 - - [08/Dec/2022 10:45:26] "[35m[1mGET /docs HTTP/1.1[0m" 500 -
Error on request:
Traceback (most recent call last):
  File "/usr/local/lib/python3.8/dist-packages/werkzeug/serving.py", line 335, in run_wsgi
    execute(self.server.app)
  File "/usr/local/lib/python3.8/dist-packages/werkzeug/serving.py", line 322, in execute
    application_iter = app(environ, start_response)
  File "/opt/app/server.py", line 57
    """Update a Pet
    Update a pet with given data, the valid fields are `name` and `category`.
    """    if pet_id > len(pets) - 1:
                   
                ^
SyntaxError: invalid syntax
192.168.50.123 - - [08/Dec/2022 10:45:26] "[35m[1mGET /favicon.ico HTTP/1.1[0m" 500 -
Error on request:
Traceback (most recent call last):
  File "/usr/local/lib/python3.8/dist-packages/werkzeug/serving.py", line 335, in run_wsgi
    execute(self.server.app)
  File "/usr/local/lib/python3.8/dist-packages/werkzeug/serving.py", line 322, in execute
    application_iter = app(environ, start_response)
  File "/opt/app/server.py", line 57
    """Update a Pet
    Update a pet with given data, the valid fields are `name` and `category`.
    """    if pet_id > len(pets) - 1:
                   
                ^
SyntaxError: invalid syntax
127.0.0.1 - - [08/Dec/2022 10:45:42] "[35m[1mGET /docs/ HTTP/1.1[0m" 500 -
Error on request:
Traceback (most recent call last):
  File "/usr/local/lib/python3.8/dist-packages/werkzeug/serving.py", line 335, in run_wsgi
    execute(self.server.app)
  File "/usr/local/lib/python3.8/dist-packages/werkzeug/serving.py", line 322, in execute
    application_iter = app(environ, start_response)
  File "/opt/app/server.py", line 57
    """Update a Pet
    Update a pet with given data, the valid fields are `name` and `category`.
    """    if pet_id > len(pets) - 1:
                   
                ^
SyntaxError: invalid syntax
192.168.50.123 - - [08/Dec/2022 10:45:47] "[35m[1mGET /docs HTTP/1.1[0m" 500 -
Error on request:
Traceback (most recent call last):
  File "/usr/local/lib/python3.8/dist-packages/werkzeug/serving.py", line 335, in run_wsgi
    execute(self.server.app)
  File "/usr/local/lib/python3.8/dist-packages/werkzeug/serving.py", line 322, in execute
    application_iter = app(environ, start_response)
  File "/opt/app/server.py", line 57
    """Update a Pet
    Update a pet with given data, the valid fields are `name` and `category`.
    """    if pet_id > len(pets) - 1:
                   
                ^
SyntaxError: invalid syntax
